@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-02-27T01:03:37Z",
-  "count" : 224,
+  "timestamp" : "2024-02-27T08:17:53Z",
+  "count" : 133,
   "count_minmax" : [ 111, 299 ],
-  "count_decinc" : [ -75, +299 ],
+  "count_decinc" : [ -166, +299 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
