@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-02-27T01:03:37Z",
+  "timestamp" : "2024-02-27T08:17:53Z",
   "count_outdated" : 191530,
   "uniques_outdated" : 1953,
-  "count" : 195722,
-  "uniques" : 1974,
+  "count" : 195834,
+  "uniques" : 1976,
   "clones" : [
     {
       "timestamp": "2024-02-13T00:00:00Z",
-      "count": 224,
+      "count": 133,
       "count_minmax": [ 111, 299 ],
-      "count_decinc": [ 75, 299 ],
+      "count_decinc": [ 166, 299 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -127,6 +127,15 @@
       "count": 300,
       "count_minmax": [ 112, 300 ],
       "count_decinc": [ 0, 300 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-02-27T00:00:00Z",
+      "count": 112,
+      "count_minmax": [ 112, 112 ],
+      "count_decinc": [ 0, 112 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
