@@ -1,10 +1,10 @@
 {
-  "count": 4117,
+  "count": 4138,
   "uniques": 2,
   "clones": [
     {
       "timestamp": "2024-02-13T00:00:00Z",
-      "count": 224,
+      "count": 133,
       "uniques": 1
     },
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2024-02-26T00:00:00Z",
       "count": 300,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2024-02-27T00:00:00Z",
+      "count": 112,
       "uniques": 2
     }
   ]
