@@ -1,3 +1,12 @@
+2024-02-27T08:17:53Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8061622278 # 154
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-27
+* notice: last 14d: unq all: 2 4138
+* notice: prev accum: outdated-unq outdated-all / unq all: 1953 191530 / 1974 195722
+* notice: next accum: outdated-unq outdated-all / unq all: 1953 191530 / 1976 195834
+* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -0 -91 / +2 +112 -0 -0 / 2 112
+* notice: removed / changed dates: [] / [2024-02-13 2024-02-27]
+
 2024-02-27T01:03:37Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8057959065 # 153
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-27
